tests/fixtures/invalid/pow_set_set_str.py
# Cannot call pow() with Set[int], Set[int], Str
x = pow({1, 2, 3}, {1, 2, 3}, "hello")
